a1/brendan_gordon/TEST_PROGRAMS/invalidtype/luke_emery-fertitta/string_mult.min
# invalid use of binary operator '*'

var x: int;
var y: string;

x = x * y;
